trying fixing overflow and fix animation

--- a/public/css/landing_page/detail-per-event/event.scss
+++ b/public/css/landing_page/detail-per-event/event.scss
@@ -2,8 +2,9 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow-x: hidden;
   width: 100%;
 }
 
