--- a/public/css/landing_page/home/home.css
+++ b/public/css/landing_page/home/home.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=Merriweather+Sans&family=Open+Sans&display=swap");
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -55,6 +56,7 @@ small .small {
 }
 
 main {
+  overflow: hidden;
   margin-top: 200px;
 }
 
